[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caesar-cipher"
version = "0.1.0"
description = "A Caesar Cipher encryption/decryption tool with bruteforce attack mode"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyside6"]

[project.scripts]
caesar-cipher = "caesar.cli:main"
caesar-gui = "caesar.gui:main"

